--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,8 @@
  */
  // Custom bootstrap variables must be set or imported *before* bootstrap.
  @import 'bootstrap';
+
+.container {
+   width: 90% !important;
+   max-width: 90% !important;
+ }
