Add simple resources views for models

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,34 @@
       <a class="navbar-brand" href="#">RestaurantImport</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <%= link_to 'Import', import_tasks_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Menus', menus_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Dishes', dishes_path, class: 'nav-link' %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to 'Sponsors', sponsors_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Events', events_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Locations', locations_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Occasions', occasions_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Places', places_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Venues', venues_path, class: 'nav-link' %>
+          </li>
         </ul>
       </div>
     </nav>
