--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<table class="table">
+<table class="table table-sm">
   <thead>
     <tr>
       <th scope="col">ID</th>
@@ -20,7 +20,7 @@
   <tbody>
     <% @sponsors.each do |sponsor| %>
       <tr>
-        <td><%= sponsor.id %></td>
+        <td><%= link_to sponsor.id, sponsor_path(sponsor) %></td>
         <td><%= sponsor.name %></td>
       </tr>
     <% end %>
