Add links to show pages

--- a/app/views/occasions/index.html.erb
+++ b/app/views/occasions/index.html.erb
@@ -20,7 +20,7 @@
   <tbody>
     <% @occasions.each do |occasion| %>
       <tr>
-        <td><%= occasion.id %></td>
+        <td><%= link_to occasion.id, occasion_path(occasion) %></td>
         <td><%= occasion.name %></td>
       </tr>
     <% end %>
