Add table-sm class to tables

--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<table class="table">
+<table class="table table-sm">
   <tbody>
     <tr><td>ID</td><td><%= @menu.id %></td></tr>
     <tr><td>Name</td><td><%= @menu.name %></td></tr>
