--- a/app/views/import_tasks/index.html.erb
+++ b/app/views/import_tasks/index.html.erb
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<table class="table">
+<table class="table table-sm">
   <thead>
     <tr>
       <th scope="col">File name</th>
