--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<table class="table">
+<table class="table table-sm">
   <tbody>
     <tr><td>ID</td><td><%= @place.id %></td></tr>
     <tr><td>Name</td><td><%= @place.name %></td></tr>
@@ -25,7 +25,7 @@
   </div>
 </div>
 
-<table class="table">
+<table class="table table-sm">
   <thead>
     <tr>
       <th scope="col">ID</th>
